K8s/springappdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-deployment

spec:
 replicas: 2

 selector:
  matchLabels:
   app: springboot-app


 template:
   metadata:
    labels:
      app: springboot-app


   spec:
     containers:
     - name: spring-container
       image: pishkekarsanthosh/myaddressbook:latest
       ports:
       - containerPort: 8084
