K8s/springdeployservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service

spec:
 type: NodePort
 selector:
   app: springboot-app
 ports: 
 - port: 8084
   targetPort: 8084
   nodePort: 30008
